Fixes event list layout issue on mobile
Event we’re overlapping each other where there was a narrow image

--- a/client/styles/_event.scss
+++ b/client/styles/_event.scss
@@ -10,7 +10,7 @@
 }
 
 .event-list-profile-photo {
-  margin-top: -8em;
+  // margin-top: -8em;
 
   @media screen and (min-width: $mobile-breakpoint) {
     margin-top: 0;
@@ -38,11 +38,12 @@
   padding-top: 0;
 }
 
-.event-list-item {
+.row.event-list-item {
   padding-top: 1.5em;
 
   @media screen and (max-width: $mobile-breakpoint) {
     padding-bottom: 1.5em;
+    flex-direction: row;
   }
 }
 
